[package]
name = "elb-rebar"
version = "0.0.2"
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A parallel AWS Elastic Load Balancing log analyzer for quick statistics on web requests"
repository = "https://github.com/pablodiegoss/elb-rebar"
authors=["Pablo Silva <pablodiegoss@hotmail.com>", "Rodrigo Oliveira <rodrigo.redcode@gmail.com>"]
keywords = ["AWS", "ELB", "logs"]
categories = ["command-line-utilities"]
exclude = ["examples/"]


[dependencies]
structopt = "0.3.13"
walkdir = "2.3.1"
num_cpus = "1.13.0"
threadpool = "1.8.1"
